<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_account"
        android:text="@string/signup_title"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_hint"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_name_hint"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_surname_hint"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="0dp"
        android:layout_height="@dimen/spinner_height"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutLastName"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_stroke_purple_500_bg_8dp"/>

    <ProgressBar
        android:id="@+id/progressBarGender"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/spinnerGender"
        app:layout_constraintBottom_toBottomOf="@id/spinnerGender"
        app:layout_constraintEnd_toEndOf="@id/spinnerGender"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/ivDropDown"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/spinnerGender"
        app:layout_constraintBottom_toBottomOf="@id/spinnerGender"
        app:layout_constraintEnd_toEndOf="@id/spinnerGender"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_arrow_down"
        android:visibility="gone"
        tools:visibility="visible"
        app:tint="@color/icon_tint_default" />

    <TextView
        android:id="@+id/tvGenderErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_error_select_gender"
        app:layout_constraintTop_toBottomOf="@id/spinnerGender"
        app:layout_constraintStart_toStartOf="@id/spinnerGender"
        android:layout_marginTop="3dp"
        android:textColor="@color/error_red"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:text="@string/signup_cta"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/spinnerGender"/>

</androidx.constraintlayout.widget.ConstraintLayout>